--- a/src/App.css
+++ b/src/App.css
@@ -4,23 +4,7 @@
   font-family: Roboto;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.Section {
+  text-align: left;
+  margin: 25px 150px 25px 150px;
 }
