--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 .App {
-  text-align: center;
   background-color: lightblue;
   font-family: Roboto;
 }
 
-.Section {
+.App .Header {
+  text-align: center;
+}
+
+.App .Section {
   text-align: left;
   margin: 25px 150px 25px 150px;
 }
